<resources>
    <string name="app_name">Exercise Sqlite</string>
    <string name="label1">Daftar Kontak</string>
    <string name="label2">Tambah Data</string>
    <string name="label3">Profil</string>
    <string name="label4">Update Data</string>
    <string name="Nama">Nama</string>
    <string name="Nomor_Telepon">Nomor Telepon</string>
    <string name="Email">Email</string>
    <string name="Alamat">Alamat</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="btn1">SIMPAN</string>
    <string name="btn2">BATAL</string>
    <string name="btn3">UBAH DATA</string>
</resources>
